name:             frontit
version:          0.1.0.0
-- synopsis:
-- description:
license:          GPL
license-file:     LICENSE
author:           Getty Ritter <getty.ritter@gmail.com>
maintainer:       Getty Ritter <getty.ritter@gmail.com>
copyright:        ©2017 Getty Ritter
category:         Web
build-type:       Simple
cabal-version:    >= 1.14

executable frontit
  hs-source-dirs:      src
  main-is:             Main.hs
  default-extensions:  OverloadedStrings,
                       ScopedTypeVariables
  ghc-options:         -Wall
  build-depends:       base >=4.7 && <4.10
                     , bytestring ==0.10.8.1
                     , containers
                     , data-default
                     , directory
                     , filepath
                     , gitit
                     , http-types
                     , pandoc
                     , text
                     , time
                     , wai
                     , warp
  default-language:    Haskell2010
